--- a/GxtCadSolutions.csproj
+++ b/GxtCadSolutions.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>GxtCadSolutions</RootNamespace>
-    <AssemblyName>GxtCadSolutions</AssemblyName>
+    <AssemblyName>ProfileGenerator</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
